	PR c++/24782 	* parser.c (cp_parser_nested_name_specifier_opt): Preserve access 	checks, even when parsing tentatively. 	PR c++/24782 	* g++.dg/parse/access9.C: New test. 	* g++.dg/tc1/dr52.C: Tweak error markers.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@109342 138bc75d-0d04-0410-961f-82ee72b054a4